GitVersion1/objects/Potential_Field_Access__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CC_Annual_Volume_MT_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Annual Volume MT Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_CFE_Annual_CFE1_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC-CFE Annual CFE1 Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_CFE_Annual_CFE2_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC-CFE-Annual CFE2 Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_CFE_Annual_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC-CFE-Annual Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_CFE_Contribution_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC-CFE-Contribution Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_CFE_Total_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC-CFE-Total Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Contribution_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC-Contribution Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Total_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Total Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Volume_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC-Volume Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_Annual_Volume_MT_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC Annual Volume MT Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_CFE_Annual_CFE1_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC-CFE-Annual CFE1 Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_CFE_Annual_CFE2_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC-CFE-Annual CFE2 Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_CFE_Annual_Volume_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC-CFE-Annual Volume Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_CFE_Contribution_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC-CFE Contribution Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_CFE_Total_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC-CFE Total Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_Contribution_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC-Contribution Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_Volume_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC-Volume Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAC_total_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAC-total Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE_CFE_Annual_CFE2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE-CFE-Annual CFE2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE_CFE_Annual_Volume_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE-CFE Annual Volume Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE_CFE_Contribution_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE-CFE Contribution Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE_CFE_Total_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE-CFE Total Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE_Contribution_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE-Contribution Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE_Total_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE-Total Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE_Volume_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE-Volume Access</label>
        <type>Checkbox</type>
    </fields>
    <label>Potential Field Access</label>
</CustomObject>